# pq-strongswan

./: Android.common.mk  Makefile  Makefile.in  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool  makelog.txt
conf/: Makefile  Makefile.in  strongswan.conf.5  strongswan.conf.5.head  strongswan.conf.5.main  strongswan.conf.5.tail
conf/options/: charon.conf
conf/plugins/: frodo.conf  oqs.conf  tcpd.conf
confGYbTHD/: defines.awk  subs.awk
fuzz/: Makefile  Makefile.in
init/: Makefile  Makefile.in
init/systemd/: Makefile  Makefile.in
init/systemd-starter/: Makefile  Makefile.in
man/: Makefile  Makefile.in  ipsec.conf.5  ipsec.secrets.5
scripts/: Makefile  Makefile.in  aes-test  bin2array  bin2sql  crypt_burn  dh_speed  dnssec  fetch  hash_burn  id2sql  key2keyid  keyid2sql  malloc_speed  nist_kem_kat  nist_sig_kat  oid2der  pubkey_speed  settings-test  thread_analysis  timeattack  tls_test
scripts/.deps/: aes-test.Po  bin2array.Po  bin2sql.Po  crypt_burn.Po  dh_speed.Po  dnssec.Po  fetch.Po  hash_burn.Po  id2sql.Po  key2keyid.Po  keyid2sql.Po  malloc_speed.Po  nist_kem_kat.Po  nist_sig_kat.Po  oid2der.Po  tls_test.Po  (+4 more)
src/: Makefile  Makefile.in
src/libcharon/plugins/tcpd/: Makefile  Makefile.am  Makefile.in  libstrongswan-tcpd.la  tcp_decouple_plugin.c  tcp_decouple_plugin.h  tcp_decouple_plugin.lo  tcp_decouple_socket.c  tcp_decouple_socket.h
src/libcharon/plugins/tcpd/.deps/: tcp_decouple_plugin.Plo
src/libcharon/plugins/tcpd/.libs/: libstrongswan-tcpd.la  libstrongswan-tcpd.lai
testing/: Makefile  Makefile.in
(+1038 files in other folders)
